syntax = "proto3";

// InvitePayload represents the core invite data
message InvitePayload {
    // The invite code (typically a Base62 string)
    string code = 1;

    // The creator's inbox ID
    string creator_inbox_id = 2;

    // The tag to mark which conversation this corresponds to, lives in `ConversationCustomMetadata`
    string tag = 3;
}

// SignedInvite represents an invite with its cryptographic signature
message SignedInvite {
    // The invite payload containing the actual invite data
    InvitePayload payload = 1;

    // The cryptographic signature (typically 65 bytes for ECDSA with recovery)
    bytes signature = 2;
}
